--- a/src/app/shared/components/dropdown-profile/dropdown-profile.component.html
+++ b/src/app/shared/components/dropdown-profile/dropdown-profile.component.html
@@ -9,7 +9,7 @@
   <!-- Dropdown menu -->
   <div *ngIf="showDropdown" class="dropdown">
     <div class="username">
-      <span>Bonnie Green</span>
+      <span>{{ username }}</span>
     </div>
     <ul class="py-2 text-sm text-gray-700">
       <li *ngFor="let menu of menuItems">
