--- a/src/app/modules/contact/contact.component.html
+++ b/src/app/modules/contact/contact.component.html
@@ -1,42 +1,41 @@
-<section class="text-gray-600 body-font relative">
-  <div class="container px-5 py-10 mx-auto flex sm:flex-nowrap flex-wrap">
-    <div
-      class="lg:w-2/3 md:w-1/2 bg-gray-300 rounded-lg overflow-hidden sm:mr-10 p-10 flex items-end justify-start relative">
-      <iframe class="absolute inset-0" title="map" marginheight="0" marginwidth="0" scrolling="no"
-        src="https://maps.google.com/maps?width=100%&height=600&hl=en&q=-6.8938371908652885, 106.79983021947811&ie=UTF8&t=&z=14&iwloc=B&output=embed"
-        width="100%" height="100%" frameborder="0"></iframe>
-      <div class="bg-white relative flex flex-wrap py-6 rounded shadow-md">
-        <div class="lg:w-1/2 px-6">
-          <h2 class="title-font font-semibold text-gray-900 tracking-widest text-xs">ADDRESS</h2>
-          <p class="mt-1">Kp karang hilir Jl. Raya Karang Tengah No.833, Karangtengah, Kec. Cibadak, Kabupaten Sukabumi,
-            Jawa Barat 43351</p>
-        </div>
-        <div class="lg:w-1/2 px-6 mt-4 lg:mt-0">
-          <h2 class="title-font font-semibold text-gray-900 tracking-widest text-xs">EMAIL</h2>
-          <a class="text-indigo-500 leading-relaxed">info@indobata.com</a>
-          <h2 class="title-font font-semibold text-gray-900 tracking-widest text-xs mt-4">PHONE</h2>
-          <p class="leading-relaxed">+62-816-637-394</p>
+<ng-container *ngIf="contactInformation">
+  <section class="wrapper">
+    <div class="containers">
+      <div class="maps-wrapper">
+        <iframe class="absolute inset-0" title="map" marginheight="0" marginwidth="0" scrolling="no"
+          src="https://maps.google.com/maps?width=100%&height=600&hl=en&q=-6.8938371908652885, 106.79983021947811&ie=UTF8&t=&z=14&iwloc=B&output=embed"
+          width="100%" height="100%" frameborder="0"></iframe>
+        <div class="card">
+          <div class="lg:w-1/2 px-6">
+            <h2>Address</h2>
+            <p class="mt-1">{{contactInformation.address}}</p>
+          </div>
+          <div class="address">
+            <h2>Email</h2>
+            <a>{{contactInformation.email}}</a>
+            <h2 class="mt-2">Phone</h2>
+            <p class="leading-relaxed">{{contactInformation.phone}}</p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="lg:w-1/3 md:w-1/2 bg-white flex flex-col md:ml-auto w-full md:py-8 mt-8 md:mt-0">
-      <h2 class="text-gray-900 text-lg mb-1 font-medium title-font">Feedback</h2>
-      <p class="leading-relaxed mb-5 text-gray-600">We appreciate your input and strive to improve our services based on
-        your feedback. Please take a moment to share your thoughts, suggestions, or any issues you may have encountered.
-        Your feedback is essential in helping us provide you with the best possible experience.</p>
+      <div class="form-wrapper">
+        <h2>Feedback</h2>
+        <p>{{contactInformation.header}}</p>
 
-      <form [formGroup]="form">
-        <app-form-field label="Name" [control]="getFormControl('fullname')" controlName="fullname"></app-form-field>
-        <app-form-field label="Phone" [control]="getFormControl('phone')" controlName="phone"></app-form-field>
-        <app-form-field label="Email" [control]="getFormControl('email')" controlName="email"></app-form-field>
-        <div class="relative mb-4">
-          <label for="message" class="leading-7 text-sm text-gray-600">Message</label>
-          <textarea id="message" name="message" formControlName="message"
-            class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"></textarea>
-        </div>
+        <form [formGroup]="form">
+          <app-form-field label="Name"  [control]="getFormControl('fullname')"  controlName="fullname"></app-form-field>
+          <app-form-field label="Phone" [control]="getFormControl('phone')"     controlName="phone"></app-form-field>
+          <app-form-field label="Email" [control]="getFormControl('email')"     controlName="email"></app-form-field>
+          <div class="relative mb-4">
+            <label for="message" class="leading-7 text-sm text-gray-600">Message</label>
+            <textarea id="message" name="message" formControlName="message"></textarea>
+          </div>
 
-        <app-submit-button [isLoading]="isSubmitting" (click)="save()" [label]="'Save'" [isDisabled]="form.invalid"></app-submit-button>
-      </form>
+          <app-submit-button [isLoading]="isSubmitting" (click)="save()" [label]="'Save'"
+            [isDisabled]="form.invalid"></app-submit-button>
+        </form>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
+
+</ng-container>
