--- a/src/app/modules/contact/contact.component.scss
+++ b/src/app/modules/contact/contact.component.scss
@@ -7,3 +7,51 @@
 	border-left-color: transparent;
 	border-right-color: transparent;
 }
+
+.wrapper {
+	@apply text-gray-600 relative;
+
+	.containers {
+		@apply container px-5 py-10 mx-auto flex sm:flex-nowrap flex-wrap;
+
+		.maps-wrapper {
+			@apply lg:w-2/3 md:w-1/2 bg-gray-300 rounded-lg overflow-hidden sm:mr-10 p-10 flex items-end justify-start relative;
+
+			.card {
+				@apply bg-white relative flex flex-wrap py-6 rounded shadow-md;
+
+				h2 {
+					@apply font-semibold text-gray-900 text-xs;
+				}
+
+				.address {
+					@apply lg:w-1/2 px-6 mt-4 lg:mt-0;
+
+					h2 {
+						@apply font-semibold text-gray-900 text-xs;
+					}
+
+					a {
+						@apply text-green-500 leading-relaxed;
+					}
+				}
+			}
+		}
+
+		.form-wrapper {
+			@apply lg:w-1/3 md:w-1/2 bg-white flex flex-col md:ml-auto w-full md:py-8 mt-8 md:mt-0;
+
+			h2 {
+				@apply text-gray-900 text-lg mb-1 font-medium;
+			}
+
+			p {
+				@apply leading-relaxed mb-5 text-gray-600;
+			}
+
+			textarea {
+				@apply w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out;
+			}
+		}
+	}
+}
