--- a/src/app/modules/profile/profile-view/profile.component.html
+++ b/src/app/modules/profile/profile-view/profile.component.html
@@ -1,40 +1,31 @@
 <ng-container *ngIf="user">
   <main class="profile-page">
-    <section class="relative block h-[500px]">
+    <section class="cover">
       <div>
-        <img [lazyLoad]="user.cover.url" alt="Background Image" class="absolute top-0 w-full h-full bg-center bg-cover">
-      </div>
-
-      <div class="top-auto bottom-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden h-[70px]"
-        style="transform: translateZ(0px)">
-        <svg class="absolute bottom-0 overflow-hidden" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none"
-          version="1.1" viewBox="0 0 2560 100" x="0" y="0">
-          <polygon class="text-gray-200 fill-current" points="2560 0 2560 100 0 100"></polygon>
-        </svg>
+        <img [lazyLoad]="user.cover.url" alt="Background Image">
       </div>
     </section>
-    <section class="relative py-16 bg-gray-200">
+    <section class="wrapper">
       <div class="container mx-auto px-4">
-        <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-xl rounded-lg -mt-64">
+        <div class="card">
           <div class="px-6">
             <div class="flex flex-wrap justify-center">
-              <div class="w-full lg:w-3/12 px-4 lg:order-2 flex justify-center">
+              <div class="avatar">
                 <div class="relative">
-                  <img alt="..." [lazyLoad]="user.avatar.url"
-                    class="bg-white shadow-xl rounded-full h-auto align-middle border-none absolute -m-16 -ml-20 lg:-ml-16 max-w-[150px]" />
+                  <img alt="avatar" [lazyLoad]="user.avatar.url" />
                 </div>
               </div>
-              <div class="w-full lg:w-4/12 px-4 lg:order-3 lg:text-right lg:self-center">
+
+              <div class="button-wrapper">
                 <div class="py-6 px-3 mt-32 sm:mt-0">
-                  <button
-                    class="bg-gray-500 active:bg-gray-600 uppercase text-white font-bold hover:shadow-md shadow text-xs px-4 py-2 rounded outline-none focus:outline-none sm:mr-2 mb-1 ease-linear transition-all duration-150"
-                    type="button">
+                  <button class="edit" type="button" (click)="edit()">
                     Edit Profile
                   </button>
                 </div>
               </div>
+
               <div class="w-full lg:w-4/12 px-4 lg:order-1">
-                <div class="flex justify-center py-4 lg:pt-4 pt-8">
+                <!-- <div class="flex justify-center py-4 lg:pt-4 pt-8">
                   <div class="mr-4 p-3 text-center">
                     <span class="text-xl font-bold block uppercase tracking-wide text-gray-600">22</span><span
                       class="text-sm text-gray-400">Friends</span>
@@ -47,15 +38,15 @@
                     <span class="text-xl font-bold block uppercase tracking-wide text-gray-600">89</span><span
                       class="text-sm text-gray-400">Comments</span>
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
             <div class="text-center mt-12">
-              <h3 class="text-4xl font-semibold leading-normal mb-2 text-gray-700">
+              <h3 class="username">
                 {{ user.username }}
               </h3>
-              <div class="text-sm leading-normal mt-0 mb-2 text-gray-400 font-bold uppercase">
-                <i class="fas fa-map-marker-alt mr-2 text-lg text-gray-400">{{ user.address.districts }}</i>
+              <div class="address">
+                <i>{{ user.address.districts }}</i>
                 <span>{{ user.address.regencies }}</span>,
                 <span>{{ user.address.provinces }}</span>
               </div>
