--- a/src/app/shared/components/dropdown/dropdown.component.html
+++ b/src/app/shared/components/dropdown/dropdown.component.html
@@ -1,5 +1,5 @@
 <div class="py-4">
-  <label id="listbox-label" class="label">{{label}}</label>
+  <label id="listbox-label" class="label font-bold">{{label}}</label>
   <div class="relative mt-2">
     <button type="button" class="dropdown-btn" (click)="toggleDropdown()">
       <span class="flex items-center">
