--- a/src/app/shared/components/dropdown/dropdown.component.scss
+++ b/src/app/shared/components/dropdown/dropdown.component.scss
@@ -1,5 +1,5 @@
 .label {
-	@apply block text-sm font-medium leading-6 text-gray-900;
+	@apply block text-sm font-bold leading-6 text-gray-900;
 }
 
 .dropdown-btn {
