--- a/src/app/shared/components/form-field/form-field.component.scss
+++ b/src/app/shared/components/form-field/form-field.component.scss
@@ -8,6 +8,8 @@
 	padding: 0.5rem;
 	transition: border-color 0.2s ease-in-out;
 	border-radius: 15px;
+  font-size: 14px;
+  color: rgb(75 85 99);
 }
 
 .form-input.border-red-500 {
