--- a/src/app/modules/profile/profile-view/profile.component.html
+++ b/src/app/modules/profile/profile-view/profile.component.html
@@ -25,20 +25,6 @@
               </div>
 
               <div class="w-full lg:w-4/12 px-4 lg:order-1">
-                <!-- <div class="flex justify-center py-4 lg:pt-4 pt-8">
-                  <div class="mr-4 p-3 text-center">
-                    <span class="text-xl font-bold block uppercase tracking-wide text-gray-600">22</span><span
-                      class="text-sm text-gray-400">Friends</span>
-                  </div>
-                  <div class="mr-4 p-3 text-center">
-                    <span class="text-xl font-bold block uppercase tracking-wide text-gray-600">10</span><span
-                      class="text-sm text-gray-400">Photos</span>
-                  </div>
-                  <div class="lg:mr-4 p-3 text-center">
-                    <span class="text-xl font-bold block uppercase tracking-wide text-gray-600">89</span><span
-                      class="text-sm text-gray-400">Comments</span>
-                  </div>
-                </div> -->
               </div>
             </div>
             <div class="text-center mt-12">
@@ -46,9 +32,10 @@
                 {{ user.username }}
               </h3>
               <div class="address">
-                <i>{{ user.address.districts }}</i>
-                <span>{{ user.address.regencies }}</span>,
-                <span>{{ user.address.provinces }}</span>
+                <span>{{ user.address.villages | capitalize }}</span>,
+                <span>{{ user.address.districts | capitalize }}</span>,
+                <span>{{ user.address.regencies | capitalize }}</span>,
+                <span>{{ user.address.provinces | capitalize }}</span>
               </div>
               <div class="mb-2 text-gray-600 mt-10">
                 <i class="fas fa-briefcase mr-2 text-lg text-gray-400"></i>Solution Manager - Creative Tim Officer
@@ -63,7 +50,7 @@
                   <p class="mb-4 text-lg leading-relaxed text-gray-700">
                     {{ user.description }}
                   </p>
-                  <a href="#pablo" class="font-normal text-gray-500">Show more</a>
+                  <!-- <a href="#pablo" class="font-normal text-gray-500">Show more</a> -->
                 </div>
               </div>
             </div>
