Prettier add printWidth: 120

--- a/src/app/modules/home/components/about-section/about-section.component.scss
+++ b/src/app/modules/home/components/about-section/about-section.component.scss
@@ -1,4 +1,3 @@
 .arrow {
-	filter: invert(27%) sepia(3%) saturate(4839%) hue-rotate(180deg)
-		brightness(104%) contrast(86%);
+	filter: invert(27%) sepia(3%) saturate(4839%) hue-rotate(180deg) brightness(104%) contrast(86%);
 }
