--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -1,7 +1,3 @@
 .bg-gradient {
-	background: linear-gradient(
-		to bottom,
-		rgba(255, 255, 255, 1) 30%,
-		rgba(0, 0, 0, 0) 100%
-	);
+	background: linear-gradient(to bottom, rgba(255, 255, 255, 1) 30%, rgba(0, 0, 0, 0) 100%);
 }
