--- a/src/app/modules/profile/profile-update/profile-update.component.scss
+++ b/src/app/modules/profile/profile-update/profile-update.component.scss
@@ -6,10 +6,14 @@
 	}
 
 	.button-wrapper {
-		@apply w-full lg:w-4/12 px-4 lg:order-3 lg:text-right lg:self-center;
+		@apply w-full lg:w-4/12 px-4 lg:order-3 lg:text-right lg:self-center  absolute right-0;
 
-		.edit {
-			@apply bg-gray-600 active:bg-gray-600 uppercase text-white font-bold hover:shadow-md shadow text-xs px-4 py-2  outline-none focus:outline-none sm:mr-2 mb-1 ease-linear transition-all duration-150;
+		div {
+			@apply py-6 px-3 mt-32 sm:mt-0;
+
+			.edit {
+				@apply bg-gray-600 active:bg-gray-600 uppercase text-white font-bold hover:shadow-md shadow text-xs px-4 py-2  outline-none focus:outline-none sm:mr-2 mb-1 ease-linear transition-all duration-150;
+			}
 		}
 	}
 }
@@ -18,7 +22,7 @@
 	@apply relative py-16 bg-gray-200 flex justify-center items-center;
 
 	.width-card {
-		@apply w-[800px];
+		@apply w-[800px] container mx-auto px-4;
 	}
 
 	.card {
