--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,6 +1,5 @@
 .arrow {
-	filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(193deg)
-		brightness(106%) contrast(101%);
+	filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(193deg) brightness(106%) contrast(101%);
 }
 
 .scrolling {
