--- a/src/app/shared/components/more-button/more-button.component.scss
+++ b/src/app/shared/components/more-button/more-button.component.scss
@@ -1,4 +1,3 @@
 .arrow {
-	filter: invert(27%) sepia(3%) saturate(4839%) hue-rotate(180deg)
-		brightness(104%) contrast(86%);
+	filter: invert(27%) sepia(3%) saturate(4839%) hue-rotate(180deg) brightness(104%) contrast(86%);
 }
