fix: app-more-button called from nested child

--- a/src/app/modules/home/components/about-section/about-section.component.html
+++ b/src/app/modules/home/components/about-section/about-section.component.html
@@ -1,20 +1,15 @@
-<section class="bg-white dark:bg-gray-900" *ngIf="overview">
-  <div class="gap-16 items-center py-8 px-4 mx-auto max-w-screen-xl lg:grid lg:grid-cols-2 lg:py-16 lg:px-6">
-    <div class="font-light text-gray-500 sm:text-lg dark:text-gray-400">
-      <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900">
+<section *ngIf="overview">
+  <div class="container">
+    <div class="wrapper">
+      <h2 class="title">
         Professional Concrete Manufacturing
       </h2>
       <p class="mb-4">{{overview.content}}</p>
-      <app-more-button
-        [label]="'Read'"
-        [url]="'/about'">
+      <app-more-button [label]="'Read'" [isOpenDialog]="false" (navigate)="onNavigate()">
       </app-more-button>
     </div>
-    <div class="grid grid-cols-2 gap-4 mt-8">
-      <img class="w-full rounded-lg"
-        *ngFor="let image of overview?.images; let i = index"
-        [lazyLoad]="image"
-        [alt]="(i+1)"
+    <div class="images">
+      <img *ngFor="let image of overview?.images; let i = index" [lazyLoad]="image" [alt]="(i+1)"
         [ngClass]="{'lg:mt-10 mt-4': i === 1}" />
     </div>
   </div>
