--- a/src/app/shared/components/more-button/more-button.component.scss
+++ b/src/app/shared/components/more-button/more-button.component.scss
@@ -1,3 +1,11 @@
 .arrow {
 	filter: invert(27%) sepia(3%) saturate(4839%) hue-rotate(180deg) brightness(104%) contrast(86%);
 }
+
+a {
+	@apply inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-gray-900 rounded-lg border border-gray-300 hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700 dark:focus:ring-gray-800 cursor-pointer;
+}
+
+span {
+	@apply tracking-tight font-extrabold text-gray-900;
+}
