feat: find project by id and pass data to dialog

--- a/src/app/modules/project/components/project-detail-dialog/project-detail-dialog.component.scss
+++ b/src/app/modules/project/components/project-detail-dialog/project-detail-dialog.component.scss
@@ -5,6 +5,26 @@
 	padding: 16px;
 	max-width: 500px;
 	animation: custom-dialog-enter 1s ease;
+
+	figure {
+		@apply max-w-lg;
+
+		img {
+			@apply h-auto max-w-full rounded-lg;
+		}
+
+		figcaption {
+			@apply mt-2 text-sm text-center text-gray-700;
+		}
+	}
+
+	span {
+		@apply text-gray-600 text-sm;
+	}
+
+	button {
+		@apply mt-4 text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2;
+	}
 }
 
 @keyframes custom-dialog-enter {
